--- a/login_page/login.css
+++ b/login_page/login.css
@@ -133,7 +133,7 @@ footer a, footer a:visited, footer a:hover, footer a:active{
     color: white;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 640px) {
     .navbar {
         height: 6.1vh;
         line-height: 5.8vh;
