--- a/track_progress_page/track_progress.css
+++ b/track_progress_page/track_progress.css
@@ -98,7 +98,7 @@ body {
 }
 
 footer {
-    margin-top: 3.9vh;
+    margin-top: 10vh;
     bottom: 0;
     height: 6.48vh;
     width: 100%;
@@ -122,7 +122,7 @@ footer a, footer a:visited, footer a:hover, footer a:active{
     color: white;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 640px) {
     .navbar {
         height: 6.1vh;
         line-height: 5.8vh;
